# mini-exchange

./: .dockerignore  .gitignore  LICENSE  README.md  benchmark.py  demo.py  docker-compose.yml  pyproject.toml
docs/: architecture.md
docs/adr/: 0001-microservice-boundaries.md
services/api-gateway/: Dockerfile
services/api-gateway/app/: __init__.py  client.py  config.py  main.py  routes.py
services/matching-service/: Dockerfile
services/matching-service/app/: __init__.py  api.py  dependencies.py  main.py  schemas.py  serializers.py
src/mini_exchange/: __init__.py  errors.py  event_log.py  exchange.py  matching_engine.py  order.py  order_book.py  trade.py  validation.py
src/mini_exchange_service/: __init__.py  api.py  errors.py  main.py  notifying_exchange.py  schemas.py  serializers.py  ws_api.py  ws_hub.py  ws_payloads.py
tests/: fixtures.py  test_api_gateway.py  test_api_smoke.py  test_cancel.py  test_cancel_lifecycle.py  test_edge_cases.py  test_invalid_inputs.py  test_matching_fifo_and_depth.py  test_matching_scenarios.py  test_matching_service.py  test_multi_symbol.py  test_order_lookup.py  test_ws_stream.py
