[project]
name = "mini-exchange"
version = "0.1.0"
description = "Mini exchange core matching engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn[standard]>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_exchange", "src/mini_exchange_service"]
